--- a/style.css
+++ b/style.css
@@ -10,24 +10,36 @@ body{
  flex-direction: column;
  align-items: center;
 }
+.thead{
+ background-color: #95A5A6;
+ font-size: 14px;
+ text-transform: uppercase;
+ letter-spacing: 0.03em;
+}
 th{
  min-width: 60px;
+ padding: 5px 0;
 }
 td{
  text-align: center;
+ padding: 5px 25px;
 }
-.toolsBar{
- 
+tr{
+ border-radius: 3px;
+ padding: 25px 30px;
+ /*display: flex;
+ justify-content: space-between;*/
+ margin-bottom: 25px;
+ box-shadow: 0px 0px 9px 0px rgb(0 0 0 / 10%);
+}
+.toolsBar{ 
  margin: 10px 0;
 }
 .toolsBar>*{
  margin: 0 5px;
  font-size: 12px;
 }
-.btn{
- font-size: 8px;
- width: 40px;
-}
+
 .cellBorder{
  border: 1px solid #333;
  border-radius: 2px;
@@ -36,6 +48,34 @@ td{
 .noBorderForRow{
  border-color: none;;
 }
+
+.btn{  
+  font-size: 8px;
+  width: 50px;
+  padding: 0.3em 1.2em;
+  margin:0 0.3em 0.3em 0;
+  border-radius:2em;
+  box-sizing: border-box;
+  text-decoration:none;
+  font-family:'Roboto',sans-serif;
+  font-weight:300;
+  color:#FFFFFF;
+  background-color:#4eb5f1;
+  text-align:center;
+  transition: all 0.2s;
+ }
+ .btn:hover{
+  background-color:#4095c6;
+ }
+ @media all and (max-width:30em){
+  .btn{
+   display:block;
+   margin:0.2em auto;
+  }
+ }
+
+
+
 
 /*loading animation*/
 .lds-spinner {
