--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ th{
 }
 td{
  text-align: center;
- padding: 5px 25px;
+ padding: 3px 25px;
 }
 tr{
  border-radius: 3px;
@@ -42,8 +42,11 @@ tr{
 
 .cellBorder{
  border: 1px solid #333;
- border-radius: 2px;
- background: khaki;
+ border-radius: 20px;
+ background: beige;
+}
+.cellBorder:focus{
+ outline-width: 0;
 }
 .noBorderForRow{
  border-color: none;;
