--- a/style.css
+++ b/style.css
@@ -32,6 +32,9 @@ tr{
  margin-bottom: 25px;
  box-shadow: 0px 0px 9px 0px rgb(0 0 0 / 10%);
 }
+tr:focus, tr:active{
+ outline-width: 0;
+}
 .toolsBar{ 
  margin: 10px 0;
 }
