--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ tr{
  margin-bottom: 25px;
  box-shadow: 0px 0px 9px 0px rgb(0 0 0 / 10%);
 }
-tr:focus, tr:active{
+tr:focus, tr:active,.btn{
  outline-width: 0;
 }
 .toolsBar{ 
@@ -80,6 +80,9 @@ tr:focus, tr:active{
   }
  }
 
+ .hidden{
+  display: none;
+ }
 
 
 
